Update Scheduler to match new Windows
amend